# hej

./: .dockerignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierrc.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  index.html  logging.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  schema.graphql  setup.cfg  start.sh  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build.yml
db/: schema.sql
db/versions/: 0001-init.sql  0002-creation-date.sql  0003-favorites.sql  0004-labels.sql
public/: index.html  manifest.json  style.css
pylibs/hej/: __main__.py  app.py  article.py  auth.py  cli.py  db.py  debug.py  exc.py  gql.py  main.py  note.py  test_db.py  test_integration.py  testutil_db.py  testutil_gql.py
pylibs/test_hej/: test_db.py
src/: AddNote.tsx  App.css  App.test.tsx  App.tsx  AppContext.tsx  AppLinkAction.tsx  AppPage.css  AppPage.test.tsx  AppPage.tsx  DeleteNote.tsx  ErrorPage.tsx  Header.module.css  Header.tsx  LoginPage.css  LoginPage.tsx  Logout.tsx  NavBar.module.css  NavBar.tsx  NoNote.tsx  Note.ts  NoteContainer.tsx  NoteEditor.module.css  NoteEditor.tsx  NoteItem.tsx  NoteListView.module.css  NoteListView.tsx  NoteView.css  NoteView.module.css  NoteView.tsx  NotesLinks.tsx  NotesList.tsx  Router.tsx  TextEditor.test.tsx  auth.ts  dummy.test.ts  gql.ts  gql.tsx  graphql-request.mock.ts  hooks.ts  index.tsx  (+2 more)
src/components/: App.test.tsx  App.tsx  TextEditor.tsx
