[project]
name = "hej"
version = "0.1.0"
description = "Simple browser-based personal wiki"
authors = [{ name = "Sebastian Rittau", email = "srittau@rittau.biz" }]
license = "MIT"
requires-python = ">= 3.12, < 4"
dependencies = [
    "aiofiles >= 23.2.1",
    "aiosqlite >= 0.21.0, < 0.22",
    "ariadne >= 0.24, < 0.25",
    "dbupgrade ~= 2025.5.0",
    "click >= 8.2.1, < 9",
    "graphql-core ~= 3.2.6",
    "starlette >= 0.48.0, < 0.49",
    "uvicorn[standard] >= 0.35.0, < 0.36",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
asserts = ">= 0.13.1, < 0.14"
mypy = "~= 1.18.2"
poethepoet = ">= 0.37.0"
pytest = "*"
pytest-asyncio = "~= 1.2.0"
pytest-mock = "~= 3.15.1"
ruff = ">= 0.13.0, < 0.14"
types-aiofiles = "^24.1.0.20250822"

[tool.ruff]
target-version = "py312"
line-length = 79
include = ["pyproject.toml", "pylibs/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W", "RUF"]
per-file-ignores = { "test_**.py" = ["F401", "F811"] }

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "hej",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"hej" = ["hej"]

[tool.pytest.ini_options]
testpaths = ["pylibs"]
asyncio_mode = "auto"
filterwarnings = [
    # "https://github.com/graphql-python/graphql-core/issues/211"
    "ignore:.*'typing.ByteString' is deprecated.*:DeprecationWarning",
]

[tool.mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.poe.tasks]
test = "pytest"
lint = "ruff check pylibs"
typecheck = "mypy pylibs"

[tool.poe.tasks.start]
cmd = "uvicorn --reload hej.app:app"
[tool.poe.tasks.start.env]
PYTHONPATH = "pylibs"
HEJ_SESSION_KEY = "sikrit"
HEJ_DB_PATH = "test-db/hej.sqlite"
