[project]
name = "hej"
version = "0.1.0"
description = "Simple browser-based personal wiki"
authors = [{ name = "Sebastian Rittau", email = "srittau@rittau.biz" }]
license = "MIT"
requires-python = ">= 3.14"
dependencies = [
    "aiofiles >= 25.1.0",
    "aiosqlite ~= 0.22.1",
    "ariadne >= 1.0.1, < 2",
    "dbupgrade ~= 2025.5.0",
    "click >= 8.2.1, < 9",
    "graphql-core ~= 3.2.8",
    "starlette >= 1.0.0, < 2",
    "uvicorn[standard] ~= 0.44.0",
]

[dependency-groups]
dev = [
    "asserts ~= 0.14.0",
    "mypy ~= 1.20.0",
    "poethepoet >= 0.43.0",
    "pytest >= 9.0.2",
    "pytest-asyncio ~= 1.3.0",
    "pytest-mock ~= 3.15.1",
    "ruff ~= 0.15.8",
    "types-aiofiles >= 25.1.0.20251011",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 79
include = ["pyproject.toml", "pylibs/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W", "RUF"]
per-file-ignores = { "test_**.py" = ["F401", "F811"] }

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "hej",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"hej" = ["hej"]

[tool.pytest.ini_options]
testpaths = ["pylibs"]
asyncio_mode = "auto"

[tool.mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.poe.tasks]
test = "pytest"
lint = "ruff check pylibs"
typecheck = "mypy pylibs"

[tool.poe.tasks.start]
cmd = "uvicorn --reload hej.app:app"
[tool.poe.tasks.start.env]
PYTHONPATH = "pylibs"
HEJ_SESSION_KEY = "sikrit"
HEJ_DB_PATH = "test-db/hej.sqlite"
